--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
           const url = `${e.detail.gitpuller}`;
           window.open(url, '_blank');
         });
+        el.addEventListener('select', (e) => {
+          window.location.href = e.detail.link;
+        });
         // debugger;
       })
       .catch(err => {
