--- a/index.html
+++ b/index.html
@@ -48,15 +48,32 @@
     .launch-button:hover {
       background-color: #005fa3;
     }
+    body {
+      margin: 0;
+      padding: 2rem;
+      display: flex;
+      justify-content: center;
+      background-color: #f5f5f5;
+      font-family: sans-serif;
+    }
+
+    .center-box {
+      max-width: 900px;
+      width: 100%;
+      background: white;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
+    }
   </style>
 </head>
 <body>
-
-  <h1>🚀 Notebook Catalog</h1>
-
-  <eox-itemfilter id="catalog">
-  </eox-itemfilter>
-
+  <div class="center-box">
+    <h1>Notebook Catalog</h1>
+    <eox-itemfilter id="catalog">
+    </eox-itemfilter>
+  </div>
+  
   <script type="module">
     const el = document.getElementById('catalog');
 
@@ -67,7 +84,8 @@
         Object.assign(el, {
         items: data,
         titleProperty: "title",
-        // imageProperty: "image",
+        imageProperty: "image",
+        resultType: "cards",
         enableResultAction: true,
         subTitleProperty: "description",
         resultType: "cards",
