feat: enabled text filter

--- a/index.html
+++ b/index.html
@@ -86,6 +86,17 @@
         titleProperty: "title",
         imageProperty: "image",
         resultType: "cards",
+        filterProperties: [
+          {
+            "keys": [
+              "title",
+            ],
+            "title": "Search",
+            "type": "text",
+            "placeholder": "Type Something...",
+            "expanded": true,
+          },
+        ],
         enableResultAction: true,
         subTitleProperty: "description",
         resultType: "cards",
